Improve test examples